k8s-shopapp-aws-architecture/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: shop-prod
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
