k8s-shopapp-aws-architecture/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: shop-prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
