k8s-shopapp-aws-architecture/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: shop-prod
spec:
  ingressClassName: nginx
  rules:
  - host: shop.company.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
